# libstriezel

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  readme.md  readme.txt
ar/: archive.cpp  archive.hpp
tests/: CMakeLists.txt  locate_catch.hpp
tests/7z/: CMakeLists.txt
tests/7z/entries/: 7z-entries.cbp  CMakeLists.txt  main.cpp
tests/7z/extract-to/: 7z-extract.cbp  CMakeLists.txt  main.cpp
tests/7z/files/: run-test.cmd  run-test.sh
tests/7z/is-7z/: CMakeLists.txt  is-7z.cbp  main.cpp
tests/ar/: CMakeLists.txt
tests/ar/entries/: CMakeLists.txt  ar-entries.cbp  main.cpp
tests/ar/extract-to/: CMakeLists.txt  ar-extract.cbp  main.cpp
tests/ar/files/: .gitignore  run-test.cmd  run-test.sh
tests/ar/is-ar/: CMakeLists.txt  is-ar.cbp  main.cpp
tests/cab/: CMakeLists.txt
tests/cab/entries/: CMakeLists.txt  cab-entries.cbp  main.cpp
tests/cab/extract-to/: CMakeLists.txt  cab-extract.cbp  main.cpp
tests/cab/files/: .gitignore  run-test.cmd  run-test.sh
tests/cab/is-cab/: CMakeLists.txt  is-cab.cbp  main.cpp
tests/filesystem/: CMakeLists.txt
tests/filesystem/directory/: CMakeLists.txt
tests/filesystem/directory/createtemp/: CMakeLists.txt  createtemp.cbp  main.cpp
tests/filesystem/file/: CMakeLists.txt
tests/filesystem/file/createtemp/: CMakeLists.txt  createtemp.cbp  main.cpp
tests/filesystem/file/exists/: CMakeLists.txt  exists.cbp  main.cpp
tests/filesystem/file/getsize64/: CMakeLists.txt  getsize64.cbp  main.cpp
tests/filesystem/file/getsizeandmtime/: CMakeLists.txt  getsizeandmtime.cbp  main.cpp
tests/filesystem/file/readintostring/: CMakeLists.txt  main.cpp  readintostring.cbp
tests/filesystem/file/remove/: CMakeLists.txt  main.cpp  remove.cbp
tests/filesystem/file/rename/: CMakeLists.txt  main.cpp  rename.cbp
tests/filesystem/file/setmtime/: CMakeLists.txt  main.cpp  setmtime.cbp
tests/filesystem/getsizestring/: CMakeLists.txt  getsizestring-tests.cbp  main.cpp
tests/filesystem/splitpathfileextension/: CMakeLists.txt  main.cpp  splitfilepathextension-tests.cbp
tests/filesystem/unified/: CMakeLists.txt  component-tests-fs.cbp  directory.cpp  file.cpp  getsizestring.cpp  main.cpp  splitpathfileextension.cpp
tests/gzip/: CMakeLists.txt
tests/gzip/entries/: CMakeLists.txt  gzip-entries.cbp  main.cpp
tests/gzip/extract-to/: CMakeLists.txt  gzip-extract.cbp  main.cpp
tests/gzip/files/: run-test.cmd  run-test.sh
tests/gzip/is-gzip/: CMakeLists.txt  is-gzip.cbp  main.cpp
tests/hash/: CMakeLists.txt
tests/hash/sha160/: CMakeLists.txt
tests/hash/sha160/secure-hashing-examples/: CMakeLists.txt  main.cpp  secure-hashing-examples.cbp
tests/hash/sha224/additional-buffer/: CMakeLists.txt  additional-examples.cbp  main.cpp
tests/hash/sha224/additional-file/: CMakeLists.txt  additional-examples.cbp  main.cpp
tests/hash/sha224/secure-hashing-examples/: CMakeLists.txt  main.cpp  secure-hashing-examples.cbp
tests/hash/sha256/additional-buffer/: CMakeLists.txt  additional-examples.cbp  main.cpp
tests/hash/sha384/: CMakeLists.txt
tests/installshield/: CMakeLists.txt
tests/installshield/entries/: CMakeLists.txt  installshield-entries.cbp  main.cpp
tests/installshield/extract-to/: CMakeLists.txt  installshield-extract.cbp  main.cpp
tests/installshield/files/: .gitignore  run-test.cmd  run-test.sh
tests/installshield/is-installshield/: CMakeLists.txt  is-installshield.cbp  main.cpp
tests/iso9660/: CMakeLists.txt
tests/iso9660/entries/: CMakeLists.txt  iso9660-entries.cbp  main.cpp
tests/iso9660/extract-to/: CMakeLists.txt  iso9660-extract.cbp  main.cpp
tests/iso9660/files/: .gitattributes  run-test.cmd  run-test.sh
tests/iso9660/is-iso9660/: CMakeLists.txt  is-iso9660.cbp  main.cpp  run-test.sh
tests/os/: CMakeLists.txt  detect.cbp  detect.cpp
tests/procfs/: CMakeLists.txt  getprocessorcount.cbp  main.cpp
tests/rar/: CMakeLists.txt
tests/rar/entries/: CMakeLists.txt  main.cpp  rar-entries.cbp
tests/rar/extract-to/: CMakeLists.txt  main.cpp  rar-extract.cbp
tests/rar/files/: run-test.cmd  run-test.sh
tests/rar/is-rar/: CMakeLists.txt  is-rar.cbp  main.cpp
tests/sha160/secure-hashing-examples/: CMakeLists.txt  main.cpp  secure-hashing-examples.cbp
tests/sha224/additional-buffer/: CMakeLists.txt  additional-examples.cbp  main.cpp
tests/sha224/additional-file/: CMakeLists.txt  additional-examples.cbp  main.cpp
tests/sha224/secure-hashing-examples/: CMakeLists.txt  main.cpp  secure-hashing-examples.cbp
tests/sha256/additional-buffer/: CMakeLists.txt  additional-examples.cbp  main.cpp
tests/sha256/additional-file/: CMakeLists.txt  additional-examples.cbp  main.cpp
tests/sha256/secure-hashing-examples/: CMakeLists.txt  main.cpp  secure-hashing-examples.cbp
tests/sha384/additional-buffer/: CMakeLists.txt  additional-examples.cbp  main.cpp
tests/sha384/additional-file/: CMakeLists.txt  additional-examples.cbp  main.cpp
tests/sha384/secure-hashing-examples/: CMakeLists.txt  main.cpp  secure-hashing-examples.cbp
tests/sha512/additional-buffer/: CMakeLists.txt  additional-examples.cbp  main.cpp
tests/sha512/additional-file/: CMakeLists.txt  additional-examples.cbp  main.cpp
tests/sha512/secure-hashing-examples/: CMakeLists.txt  main.cpp  secure-hashing-examples.cbp
tests/tar/: CMakeLists.txt
tests/tar/entries/: CMakeLists.txt  main.cpp  tar-entries.cbp
tests/tar/extract-to/: CMakeLists.txt  main.cpp  tar-extract.cbp
tests/tar/files/: run-test.cmd  run-test.sh
tests/tar/is-tar/: CMakeLists.txt  is-tar.cbp  main.cpp
tests/xz/: CMakeLists.txt
tests/xz/entries/: CMakeLists.txt  main.cpp  xz-entries.cbp
tests/xz/extract-to/: CMakeLists.txt  main.cpp  xz-extract.cbp
tests/xz/files/: run-test.cmd  run-test.sh
tests/xz/is-xz/: CMakeLists.txt  is-xz.cbp  main.cpp
tests/zip/: CMakeLists.txt
tests/zip/entries/: CMakeLists.txt  main.cpp  run-test.cmd  run-test.sh  zip-entries.cbp
tests/zip/extract-to/: CMakeLists.txt  main.cpp  run-test.cmd  run-test.sh  zip-extract.cbp
tests/zip/is-zip/: CMakeLists.txt  is-zip.cbp  main.cpp  run-test.cmd  run-test.sh
(+242 files in other folders)
